# ShapesParser

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  IShapeParser.h  ShapeParser.cpp  ShapeParser.h  Shapes.h  main.cpp
tests/: circles.txt  shapes.txt  wrong_triangle.txt
